--- a/chart_table2.html
+++ b/chart_table2.html
@@ -15,20 +15,20 @@
       margin: 0;
       padding: 0;
     }
-
+  
 </style>
 </head>
 <body>
-
+  
   <div id="container"></div>
-
+  
 
   <script>
 
     anychart.onDocumentReady(function () {
       // create data set on our data
       var chartData = {
-        title: 'Top 10 Products by Profit',
+        title: 'Population of Census Blocks by Race, Ethnicity, and Broadband Availability',
         header: ['#', 'Served Urban', 'Served Rural', 'Unserved Urban', 'Unserved Rural'],
         rows: [
           ['White, NH', 73, 20, -.8, -5.2] ,
@@ -82,7 +82,7 @@
       // initiate chart drawing
       chart.draw();
     });
-
+  
 </script>
 </body>
 </html>
