--- a/chart_table2.html
+++ b/chart_table2.html
@@ -48,7 +48,7 @@
       chart.animation(true);
 
       // force chart to stack values by Y scale.
-      chart.yScale().stackMode('value');
+      //chart.yScale().stackMode('value');
 
       // chart padding
       chart.padding([10, 20, 5, 20]);
