--- a/chart_table2.html
+++ b/chart_table2.html
@@ -53,7 +53,7 @@
       // chart padding
       chart.padding([10, 20, 5, 20]);
 
-      chart.xAxis(0).title('Products').stroke(null);
+      //chart.xAxis(0).title('Products').stroke(null);
       chart.xAxis(1).stroke(null).orientation('top');
       chart.yAxis(0).title('Percent of Population');
       chart.yAxis(0).labels().format('{%Value}%');
